; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/hisi_sas/extr_hisi_sas_v3_hw.c_start_phy_v3_hw.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/hisi_sas/extr_hisi_sas_v3_hw.c_start_phy_v3_hw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hisi_hba = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hisi_hba*, i32)* @start_phy_v3_hw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @start_phy_v3_hw(%struct.hisi_hba* %0, i32 %1) #0 {
  %3 = alloca %struct.hisi_hba*, align 8
  %4 = alloca i32, align 4
  store %struct.hisi_hba* %0, %struct.hisi_hba** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.hisi_hba*, %struct.hisi_hba** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @config_id_frame_v3_hw(%struct.hisi_hba* %5, i32 %6)
  %8 = load %struct.hisi_hba*, %struct.hisi_hba** %3, align 8
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @config_phy_opt_mode_v3_hw(%struct.hisi_hba* %8, i32 %9)
  %11 = load %struct.hisi_hba*, %struct.hisi_hba** %3, align 8
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @enable_phy_v3_hw(%struct.hisi_hba* %11, i32 %12)
  ret void
}

declare dso_local i32 @config_id_frame_v3_hw(%struct.hisi_hba*, i32) #1

declare dso_local i32 @config_phy_opt_mode_v3_hw(%struct.hisi_hba*, i32) #1

declare dso_local i32 @enable_phy_v3_hw(%struct.hisi_hba*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
